first commit Bookshelf App

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- STYLE -->
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="./assets/styles/main.css" />
     <title>Book Shelf App</title>
   </head>
   <body>
@@ -51,6 +51,6 @@
 
       <div class="bookWrapper"></div>
     </main>
-    <script src="main.js"></script>
+    <script src="./assets/script/main.js"></script>
   </body>
 </html>
